** Fixed a potential layout bug in Illusion event lists

--- a/webapp/src/main/webapp/resources/novus/scss/illusion-event-common.scss
+++ b/webapp/src/main/webapp/resources/novus/scss/illusion-event-common.scss
@@ -86,12 +86,13 @@ h4>a{
   text-transform: uppercase;
   color: $default-color;
   font-family: $default-font;
+  @include box-sizing(border-box);
 }
 
 .illusion-list-item img {
   float: right;
   vertical-align: top;
-  margin-right: 16px;
+  margin-left: 8px;
   max-height: 20px;
 }
 
